commit desde SmartGib

--- a/README
+++ b/README
@@ -7,3 +7,4 @@ cambio desde Gitforce
 cambio 2 desde GitForce
 cambio en git cola
 cambio realizado en git extensions
+se relian cambios directos desde SmartGit
