se realiza cambio de branch

--- a/README
+++ b/README
@@ -9,3 +9,5 @@ cambio en git cola
 cambio realizado en git extensions
 se relian cambios directos desde SmartGit
 cambio en el work
+
+Se cambia de branch
