cambio para merge, perdio el segundo cambio del brach test

--- a/README
+++ b/README
@@ -11,4 +11,4 @@ se relian cambios directos desde SmartGit
 cambio en el work
 
 Se cambia de branch
-segundo cambio en el branch test
+cambio para el merge
